--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -175,8 +175,8 @@
             <nav class="mt-2">
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
-          <li class="nav-item has-treeview menu-open">
-            <a href="#" class="nav-link active">
+          <li class="nav-item has-treeview ">
+            <a href="#" class="nav-link ">
               <i class="nav-icon fas fa-chart-pie"></i>
               <p>
                 Manage Stock
@@ -186,7 +186,7 @@
             <ul class="nav nav-treeview">
 
             <li class="nav-item">
-                <a href="{{ path('home') }}" class="nav-link active">
+                <a href="{{ path('home') }}" class="nav-link ">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Home</p>
                 </a>
@@ -286,7 +286,7 @@
             </ul>
           </li>
 
-           <li class="nav-item has-treeview menu-open">
+           <li class="nav-item has-treeview  ">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-chart-pie"></i>
               <p>
@@ -311,7 +311,7 @@
           </li>
 
 
-          <li class="nav-item has-treeview menu-open">
+          <li class="nav-item has-treeview  ">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-chart-pie"></i>
               <p>
@@ -451,6 +451,25 @@
 			<!-- AdminLTE App --><script src="{{asset('assets/dist/js/adminlte.min.js')}}"> </script>
 			<script src="{{asset('assets/plugins/select2/js/select2.full.min.js')}}"></script>
 			<script src="{{asset('assets/js/bootstrap.min.js')}}"></script>
+
+      	<script>
+	$(function () {
+    var url = window.location;
+    // for single sidebar menu
+    $('ul.nav-sidebar a').filter(function () {
+        return this.href == url;
+    }).addClass('active');
+
+    // for sidebar menu and treeview
+    $('ul.nav-treeview a').filter(function () {
+        return this.href == url;
+    }).parentsUntil(".nav-sidebar > .nav-treeview")
+        .css({'display': 'block'})
+        .addClass(' ').prev('a')
+        .addClass('active');
+});
+	</script>
+  
 			{% block javascripts %}{% endblock %}
 
 		</body>
