--- a/templates/requests/show.html.twig
+++ b/templates/requests/show.html.twig
@@ -117,10 +117,10 @@
 							<th>
 								<span class="badge {{coloring}}">Approved quantity</span>
 							</th>
-							<td><input type="number" name="approved_quantity[]" value={{ order.quantity }} min="1" max="{{order.quantity}}"/></td>
+							<td><input type="number" name="{{ order.id }}" value="{{ order.quantity }}" min="1" max="{{order.quantity}}"/></td>
 						</tr>
 					
-					</tbody>
+					</tbody> 
 				</table>
                 <hr>
          {% endfor %}
