--- a/templates/requests/model22.html.twig
+++ b/templates/requests/model22.html.twig
@@ -136,11 +136,12 @@
 								<td>{{order.serial}}</td>
 								<td>KE</td>
 								<td>ESKE</td>
-								<td>{{order.quantity}}</td>
+								{% set quantity = order.itemApprovalStatuses | last.allowedQuantity %}
+								<td>{{ quantity }}</td>
 								<td>{{order.unitprice}}</td>
-								<td>{{ order.unitprice * order.quantity }}</td>
+								<td>{{ order.unitprice * quantity }}</td>
 								<td>Remarks here ...</td>
-								{% set total = total +  order.unitprice * order.quantity  %}
+								{% set total = total +  order.unitprice * quantity  %}
 								
 								 
 							</tr>
