--- a/templates/requests/show.html.twig
+++ b/templates/requests/show.html.twig
@@ -117,14 +117,27 @@
 							<th>
 								<span class="badge {{coloring}}">Approved quantity</span>
 							</th>
-							<td><input type="number" name="{{ order.id }}" value="{{ order.quantity }}" min="1" max="{{order.quantity}}"/></td>
+								{% set currentQuantity = order.quantity %}
+							{% if order.itemApprovalStatuses | last %}
+							{% set currentQuantity = order.itemApprovalStatuses | last.allowedQuantity %}
+							{% endif %}
+							<td><input type="number" name="{{ order.id }}" value="{{ currentQuantity }}" min="1" max="{{ currentQuantity }}"/ {% if requests.closed %}
+							disabled="disabled"
+							{% else %}
+								
+							{% endif %}
+							></td>
 						</tr>
 					
 					</tbody> 
 				</table>
                 <hr>
          {% endfor %}
+{% if not requests.closed %}
+		 <th  style="margin:0px"> <input type="submit" value="Approve" name="approve" class="btn btn-success"></input></th>
+		 {% endif %}
 		 </form>
+
 			</div>
 		</div>
 	</div>
@@ -137,7 +150,7 @@
 
 <th><a href="{{ path('requests_index') }}" class="btn btn-primary">Back</a></th>
 {% if not requests.closed %}
-<th  style="margin:0px"> <input type="submit" value="Approve" name="approve" class="btn btn-success"></input></form></th>
+{# <th  style="margin:0px"> <input type="submit" value="Approve" name="approve" class="btn btn-success"></input></form></th> #}
  
 
 <th  style="margin:0px"><form action ="{{ path('requests_approve', {'id': requests.id}) }}" method="POST"> <input type="submit" value="Reject" name="reject" class="btn btn-warning"></input></form></th>
