--- a/templates/requests/show.html.twig
+++ b/templates/requests/show.html.twig
@@ -133,7 +133,7 @@
 				</table>
                 <hr>
          {% endfor %}
-{% if not requests.closed %}
+{% if  requests.closed is same as(null) %}
 		 <th  style="margin:0px"> <input type="submit" value="Approve" name="approve" class="btn btn-success"></input></th>
 		 {% endif %}
 		 </form>
